# gadgetron

./: .cirrus.yml  .clang-format  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  AccumulatorGadget.cpp  AcquisitionFinishGadget.cpp  AcquisitionPassthroughGadget.cpp  AcquisitionPassthroughGadget.h  CBCT_acquisition.h  CBCT_binning.h  CBCT_forwards_projection.cpp  CB_OF_reconstruct.cpp  CB_SBreconstruct.cpp  CB_reconstruct.cpp  CMakeLists-OLD.txt  CMakeLists.txt  Compiler.cmake  CropAndCombineGadget.cpp  DefaultConfigurator.cpp  DefaultConfigurator.h  DicomFinishGadget.cpp  Dockerfile  Dockerfile_back  Dockerfile_mamba  Dockerfile_nhlbi  FDK_reconstruct_3d.cpp  FDK_reconstruct_4d.cpp  FFTGadget.cpp  Gadget.h  GadgetContainerMessage.h  GadgetMessageInterface.h  GadgetServerAcceptor.cpp  GadgetStreamConfigurator.cpp  GadgetStreamConfigurator.h  GadgetStreamConfiguratorFactory.cpp  GadgetStreamConfiguratorFactory.h  GadgetStreamController.cpp  GadgetStreamController.h  (+36 more)
Xray/: CBCT_acquisition.h  CB_reconstruct.cpp  CMakeLists.txt  FDK_reconstruct.cpp  PS_BinningData.h  PS_Dataset.h  PS_Geometry.h  ProjectImage.cpp  conebeam_projection.cu  conebeam_projection.h  float3x3.h  hoCudaConebeamProjectionOperator.cpp  hoCudaConebeamProjectionOperator.h
apps/adapters/: CMakeLists.txt  img_msg_adapter.h  ismrmrd_msg_adapter.h  mrd_to_stream.cpp  stream_to_mrd.cpp
apps/gadgetron/: AST.h  Builders.cpp  Builders.h  CMakeLists.txt  ChainBuilder.cpp  ChainBuilder.h  Config.cpp  Config.h  ConfigParsers.cpp  ConfigParsers.h  Connection.cpp  Connection.h  EndGadget.cpp  EndGadget.h  Gadget.cpp  Gadget.h  GadgetContainerMessage.h  GadgetMessageInterface.h  GadgetMessageReaderWriter.h  GadgetServerAcceptor.cpp  GadgetServerAcceptor.h  GadgetStreamController.cpp  GadgetStreamController.h  GadgetStreamInterface.cpp  GadgetStreamInterface.h  Gadgetron.h  Makefile  (+30 more)
chroot/: CMakeLists.txt  README.rst  chroot-manual.txt  chrootmounter.sh  clean_gadgetron_data.sh  copy-cuda-lib.sh.in  copy_file_and_dependencies  create_chroot-DEB-TEST.sh  create_chroot-deb.sh  create_chroot-local.sh  create_chroot.sh  create_chroot_base.sh  create_chroot_from_base.sh  enter-chroot-env.sh.in  gadgetron-dependency-query.sh.in  gadgetron_chroot.conf  gadgetron_ismrmrd_client.sh.in  gadgetron_ismrmrd_client_noise_summary.sh.in  generate_gadgetron_root  get_dependencies_for_binary  gt_alive.sh.in  install_chroot_image.sh  make_gadgetron_tar.sh  make_list_of_dependencies  mount.sh  mount_image.sh  mount_image.sh.in  nvidia-copy.sh  run-gadgetron-dependency-query.sh  run-gadgetron-dependency-query.sh.in  run-gadgetron_ismrmrd_client.sh  run-gadgetron_ismrmrd_client.sh.in  run-gadgetron_ismrmrd_client_noise_summary.sh.in  run-gt_alive.sh  run-gt_alive.sh.in  run-siemens_to_ismrmrd.sh  run-siemens_to_ismrmrd.sh.in  run-webapp.sh.in  siemens_to_ismrmrd.sh.in  start-env.sh  (+16 more)
cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackDeb.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  FindACE.cmake  FindArmadillo.cmake  FindBART.cmake  FindCBLAS.cmake  FindCUDA_advanced.cmake  FindCULA.cmake  FindDCMTK.cmake  FindFFTW3.cmake  FindGBLAS.cmake  FindGLAPACK.cmake  FindGLEW.cmake  FindGMatlab.cmake  FindGadgetron.cmake  FindIsmrmrd.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindNumPy.cmake  FindNumpy.cmake  FindOctave.cmake  FindPLplot.cmake  FindPUGIXML.cmake  FindPrometheusCpp.cmake  FindPugiXML.cmake  FindPython3.cmake  FindPython3_compat.cmake  FindRocksDB.cmake  FindSphinx.cmake  FindXSD.cmake  FindXalanC.cmake  FindXercesC.cmake  FindZFP.cmake  InstallLinuxDependencies.cmake  (+16 more)
core/: CMakeLists.txt  Channel.cpp  Channel.h  Channel.hpp  ChannelAlgorithms.h  ChannelIterator.h  Context.cpp  Context.h  Gadget.cpp  Gadget.h  GadgetContainerMessage.h  IsmrmrdContextVariables.cpp  IsmrmrdContextVariables.h  LegacyACE.cpp  LegacyACE.h  MPMCChannel.h  Message.cpp  Message.h  Message.hpp  MessageID.h  Node.h  Process.cpp  Process.h  PropertyMixin.h  PropteryMixin.h  PureGadget.h  Reader.h  Response.cpp  Response.h  Storage.cpp  Storage.h  StorageSetup.h  ThreadPool.h  TypeTraits.h  Types.h  Types.hpp  Writer.h  gadgetcore_export.h  gadgetron_paths.cpp  gadgetron_paths.h
doc/: .gitignore  CMakeLists.txt
gadgets/: .gitignore  CMakeLists.txt
libmrd/: CMakeLists.txt
mri/: CMakeLists.txt  main_fista.cpp  main_ncg.cpp  main_sbc.cpp
operators/: CMakeLists.txt  cuGaussianFilterOperator.cu  cuHaarWaveletOperator.cu  cuHaarWaveletOperator.h  cuWaveletOperator.cu  cuWaveletOperator.h  hoCuPartialDerivativeOperator.h  projectionSpaceOperator.h  subsetOperator.h
proton/: CMakeLists.txt  cuOperatorPathBackprojection.cu  cuOperatorPathBackprojection.h  hdf5_utils.h  histogram.cu  histogram.h  hoCuOperatorPathBackprojection.cu  hoCuOperatorPathBackprojection.h  hoCuProtonBufferedSubsetOperator.h  hoCuProtonSubsetOperator.h  hostBufferedSubsetProtonReconstruct.cpp  hostProtonReconstruct.cpp  hostSBProtonReconstruct.cpp  hostSubsetProtonReconstruct.cpp  protonForwardProject.cpp  protonReconstruct.cpp  proton_kernels.cu  proton_kernels.h
test/: CMakeLists.txt  ChannelAlgorithmsTest.cpp  IsmrmrdContextVariables_test.cpp  StorageSpaces_test.cpp  cmr_analytical_strain_test.cpp  cmr_mapping_test.cpp  cmr_strain_test.cpp  cmr_thickening_test.cpp  core_primitive_io_test.cpp  core_test.cpp  cuGTBLAS_test.cpp  cuNDArray_Vector_td_test.cpp  cuNDArray_blas_test.cpp  cuNDArray_elemwise_test.cpp  cuNDArray_operators_test.cpp  cuNDArray_test.cpp  cuNDArray_utils_test.cpp  cuNDFFT_test.cpp  cuNFFT_test.cpp  cuSDC_test.cpp  cuVector_td_test_kernels.cu  cuVector_td_test_kernels.h  curveFitting_test.cpp  distributed_test.cpp  from_string_test.cpp  hoCuGTBLAS_test.cpp  hoCuNDArray_elemwise_test.cpp  hoGTBLAS_test.cpp  hoNDArrayView_test.cpp  hoNDArray_blas_test.cpp  hoNDArray_elemwise_test.cpp  hoNDArray_linalg_test.cpp  hoNDArray_operators_test.cpp  hoNDArray_reductions_test.cpp  hoNDArray_test.cpp  hoNDArray_utils_test.cpp  hoNDFFT_test.cpp  hoNDWavelet_test.cpp  hoNFFT_test.cpp  hoSDC_test.cpp  (+16 more)
toolboxes/: CMakeLists.txt
(+4503 files in other folders)
